--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             extend: {
               colors: {
                 clifford: '#da373d',
+                'tea-head': '#1C1C1C',
+                'tea-description': '#777',
+                'tea-button': '#FF8938',
               }
             }
           }
@@ -33,10 +36,26 @@
         }
       </style>
 </head>
-<body>
+<body class="manrope-font">
     <!-- header section start -->
-    <header class="header">
-
+    <header class="max-w-screen-xl mx-auto p-8 md:pl-24 lg:pl-28 pr-16 md:py-14 lg:py-16 lg:flex">
+        <div class="space-y-6">
+            <h1 class="text-7xl text-tea-head font-bold">It's good <br>
+                tea time at The Tea House
+            </h1>
+            <p class="text-lg text-tea-description font-medium">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <button class="btn bg-tea-button text-xl font-semibold text-white hover:bg-orange-700">Explore More <img src="./images/arrow.png" alt=""></button>
+        </div>
+        <div class="header-img relative">
+            <img src="./images/banner.png " alt="" class="w-full">
+            <div class="w-64 p-2 absolute left-10 lg:left-20 bottom-0.5 bg-white shadow-lg rounded-lg">
+                <img class="inline-block" src="./images/star.svg" alt="">
+                <span class="text-3xl text-tea-head font-bold">5.00</span>
+                <div class="pl-12">
+                    <p class="text-base text-tea-description font-semibold">Trust Pilot Ratings</p>
+                </div>
+            </div>
+        </div>
     </header>
 
  
@@ -48,7 +67,7 @@
 
     <!-- footer section start -->
     <footer class="footer">
-        
+
     </footer>
 
     
