--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 'tea-head': '#1C1C1C',
                 'tea-description': '#777',
                 'tea-button': '#FF8938',
+              },
+              BackgroundImage: {
+                'tea-gradient': 'linear-gradient(180deg, #F4F4F4 0%, rgba(244, 244, 244, 0.00) 100%)',
               }
             }
           }
@@ -61,6 +64,59 @@
  
     <!-- main section start  -->
     <main>
+        
+        <!-- our features section start  -->
+        <section class="max-w-screen-xl mx-auto p-8 md:px-24 lg:px-36 lg:pb-28">
+            <div class="text-center mb-12 space-y-5">
+                <h3 class="text-5xl text-tea-head font-extrabold">Our Featured Products
+                </h3>
+                <p class="text-base text-tea-description font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+                </p>
+            </div>
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+              <!-- card 1 -->
+              <div class="card bg-base-100 shadow-lg">
+                <figure class="px-10 pt-10">
+                  <img src="./images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center space-y-3">
+                  <h2 class="card-title text-2xl text-tea-head font-extrabold">Milk Tea</h2>
+                  <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+              </div>
+              <!-- card 2 -->
+              <div class="card bg-base-100 shadow-lg">
+                <figure class="px-10 pt-10">
+                  <img src="./images/tea-2.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center space-y-3">
+                  <h2 class="card-title text-2xl text-tea-head font-extrabold">Black Tea</h2>
+                  <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+              </div>
+              <!-- card 3 -->
+              <div class="card bg-base-100 shadow-lg">
+                <figure class="px-10 pt-10">
+                  <img src="./images/tea-3.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center space-y-3">
+                  <h2 class="card-title text-2xl text-tea-head font-extrabold">Lemon Tea</h2>
+                  <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+              </div>
+              <!-- card 4 -->
+              <div class="card bg-base-100 shadow-lg">
+                <figure class="px-10 pt-10">
+                  <img src="./images/tea-4.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center space-y-3">
+                  <h2 class="card-title text-2xl text-tea-head font-extrabold">Green Tea</h2>
+                  <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+              </div>
+            </div>
+        </section>
+
 
     </main>
 
