--- a/index.html
+++ b/index.html
@@ -65,57 +65,83 @@
     <!-- main section start  -->
     <main>
         
-        <!-- our features section start  -->
-        <section class="max-w-screen-xl mx-auto p-8 md:px-24 lg:px-36 lg:pb-28">
-            <div class="text-center mb-12 space-y-5">
-                <h3 class="text-5xl text-tea-head font-extrabold">Our Featured Products
-                </h3>
-                <p class="text-base text-tea-description font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
-                </p>
+      <!-- our features section start  -->
+      <section class="max-w-screen-xl mx-auto p-8 md:px-24 lg:px-36 lg:pb-28">
+          <div class="text-center mb-12 space-y-5">
+            <h3 class="text-5xl text-tea-head font-extrabold">Our Featured Products
+            </h3>
+            <p class="text-base text-tea-description font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+            </p>
+        </div>
+        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- card 1 -->
+          <div class="card bg-base-100 shadow-lg">
+            <figure class="px-10 pt-10">
+              <img src="./images/tea-1.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center space-y-3">
+              <h2 class="card-title text-2xl text-tea-head font-extrabold">Milk Tea</h2>
+              <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
             </div>
-            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
-              <!-- card 1 -->
-              <div class="card bg-base-100 shadow-lg">
-                <figure class="px-10 pt-10">
-                  <img src="./images/tea-1.png" alt="Shoes" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center space-y-3">
-                  <h2 class="card-title text-2xl text-tea-head font-extrabold">Milk Tea</h2>
-                  <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
-                </div>
-              </div>
-              <!-- card 2 -->
-              <div class="card bg-base-100 shadow-lg">
-                <figure class="px-10 pt-10">
-                  <img src="./images/tea-2.png" alt="Shoes" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center space-y-3">
-                  <h2 class="card-title text-2xl text-tea-head font-extrabold">Black Tea</h2>
-                  <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
-                </div>
-              </div>
-              <!-- card 3 -->
-              <div class="card bg-base-100 shadow-lg">
-                <figure class="px-10 pt-10">
-                  <img src="./images/tea-3.png" alt="Shoes" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center space-y-3">
-                  <h2 class="card-title text-2xl text-tea-head font-extrabold">Lemon Tea</h2>
-                  <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
-                </div>
-              </div>
-              <!-- card 4 -->
-              <div class="card bg-base-100 shadow-lg">
-                <figure class="px-10 pt-10">
-                  <img src="./images/tea-4.png" alt="Shoes" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center space-y-3">
-                  <h2 class="card-title text-2xl text-tea-head font-extrabold">Green Tea</h2>
-                  <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
-                </div>
-              </div>
+          </div>
+          <!-- card 2 -->
+          <div class="card bg-base-100 shadow-lg">
+            <figure class="px-10 pt-10">
+              <img src="./images/tea-2.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center space-y-3">
+              <h2 class="card-title text-2xl text-tea-head font-extrabold">Black Tea</h2>
+              <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
             </div>
-        </section>
+          </div>
+          <!-- card 3 -->
+          <div class="card bg-base-100 shadow-lg">
+            <figure class="px-10 pt-10">
+              <img src="./images/tea-3.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center space-y-3">
+              <h2 class="card-title text-2xl text-tea-head font-extrabold">Lemon Tea</h2>
+              <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- card 4 -->
+          <div class="card bg-base-100 shadow-lg">
+            <figure class="px-10 pt-10">
+              <img src="./images/tea-4.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center space-y-3">
+              <h2 class="card-title text-2xl text-tea-head font-extrabold">Green Tea</h2>
+              <p class="text-base text-tea-description font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+        </div>   
+      </section>
+
+      <!-- great tea section start  -->
+      <section class="max-w-screen-xl mx-auto p-8 md:px-18 lg:px-24  lg:pb-20  lg:flex gap-8">
+
+        <div class="grid md:grid-cols-2 flex-1 gap-4 mb-5 lg:mb-0">
+          <div class="bg-gradient-to-r from-[#F00] opacity-10 to-[#FF8938] h-32"></div>
+          <div class="row-span-2 bg-[#E6A6231A] p-10">
+            <img src="./images/fresh-1.png" alt="">
+          </div>
+          <div class="row-span-2 bg-[#5776391A] p-10">
+            <img src="./images/fresh-2.png" alt="">
+          </div>
+          <div class="bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00] h-32"></div>
+        </div>
+        <div class="space-y-5 flex-1">
+          <h3 class="text-5xl text-tea-head font-extrabold">Great Tea, Freshly <br> Presented</h3>
+          <p class="text-base text-tea-description font-medium">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h4 class="text-xl text-tea-head font-extrabold">Unique Taste</h4>
+          <p class="text-base text-tea-description font-medium">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h4 class="text-xl text-tea-head font-extrabold">Premium Quality</h4>
+          <p class="text-base text-tea-description font-medium">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+
+      </section>
+
+      
 
 
     </main>
