--- a/index.html
+++ b/index.html
@@ -141,7 +141,52 @@
 
       </section>
 
-      
+      <!-- meet our section start  -->
+      <section class="max-w-screen-xl mx-auto p-8 md:px-18 lg:px-24  lg:pb-20  lg:flex gap-20 items-center bg-gradient-to-r from-[#F00] to-[#FF8938] opacity-95">
+
+        <div class="space-y-7 lg:pr-28 mb-5 lg:mb-0">
+          <h3 class="text-5xl text-white font-extrabold">Meet Our Super <br> Clients</h3>
+          <p class="text-base text-[#F4F4F4] font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          <button class="btn ">Show All</button>
+        </div>
+        
+        <!-- review container -->
+        <div class="space-y-12 relative">
+          <!-- next review   -->
+          <div class="bg-white rounded-lg p-12 relative opacity-60 z-10">
+            <div class="avatar absolute -top-2 -left-2">
+              <div class="w-14 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                <img src="./images/client.png" />
+              </div>
+            </div>
+            <p class="text-base text-tea-description font-normal mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h5 class="text-base text-tea-head font-bold">Ilham Yuda</h5>
+            <span class="text-base text-[#5D5A6F] font-medium">Businessman</span>
+          </div>
+          <!-- current review   -->
+          <div class="lg:w-[433px] bg-white rounded-lg p-12 absolute top-28 lg:-left-40 z-20">
+            <div class="avatar absolute -top-2 -left-2">
+              <div class="w-14 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                <img src="./images/client.png" />
+              </div>
+            </div>
+            <p class="text-base text-tea-description font-normal mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h5 class="text-base text-tea-head font-bold">Ilham Yuda</h5>
+            <span class="text-base text-[#5D5A6F] font-medium">Businessman</span>
+          </div>
+          <!-- preview review   -->
+          <div class="bg-white rounded-lg p-12 relative opacity-60 z-10">
+            <div class="avatar absolute -top-2 -left-2">
+              <div class="w-14 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                <img src="./images/client.png" />
+              </div>
+            </div>
+            <p class="text-base text-tea-description font-normal mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h5 class="text-base text-tea-head font-bold">Ilham Yuda</h5>
+            <span class="text-base text-[#5D5A6F] font-medium">Businessman</span>
+          </div>
+        </div>
+      </section>
 
 
     </main>
