news event section added

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </section>
 
       <!-- great tea section start  -->
-      <section class="max-w-screen-xl mx-auto p-8 md:px-18 lg:px-24  lg:pb-20  lg:flex gap-8">
+      <section class="max-w-screen-xl mx-auto p-8 md:px-18 lg:px-24  lg:pb-20  lg:flex gap-8 lg:-mb-36">
 
         <div class="grid md:grid-cols-2 flex-1 gap-4 mb-5 lg:mb-0">
           <div class="bg-gradient-to-r from-[#F00] opacity-10 to-[#FF8938] h-32"></div>
@@ -142,7 +142,7 @@
       </section>
 
       <!-- meet our section start  -->
-      <section class="max-w-screen-xl mx-auto p-8 md:px-18 lg:px-24  lg:pb-20  lg:flex gap-20 items-center bg-gradient-to-r from-[#F00] to-[#FF8938] opacity-95">
+      <section class="max-w-screen-xl mx-auto p-8 md:px-18 lg:px-24  lg:pb-20  lg:flex gap-20 items-center bg-gradient-to-r from-[#F00] to-[#FF8938] opacity-95 ">
 
         <div class="space-y-7 lg:pr-28 mb-5 lg:mb-0">
           <h3 class="text-5xl text-white font-extrabold">Meet Our Super <br> Clients</h3>
@@ -186,6 +186,55 @@
             <span class="text-base text-[#5D5A6F] font-medium">Businessman</span>
           </div>
         </div>
+      </section>
+
+      <!-- news event start  -->
+      <section class="max-w-screen-xl mx-auto p-8 md:px-18 lg:px-24  lg:pb-20 lg:my-20">
+        <div class="text-center lg:mb-12 mb-8">
+          <h3 class="text-5xl text-tea-head font-extrabold">News & Events </h3>
+          <p class="text-base text-tea-description font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        </div>
+
+        <!-- news card  -->
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- card 1 -->
+          <div class="card  bg-base-100 border-2 p-5">
+            <figure><img class="w-full" src="./images/news-1.png" alt="Shoes" /></figure>
+            <div class="card-body p-2 mt-3">
+              <span class="text-base text-tea-description font-medium">Feb 05, 2027</span>
+              <h2 class="card-title text-xl text-tea-head font-extrabold">
+                Collecting 8 points for discount
+              </h2>
+              <p class="text-base text-tea-description font-medium">There are many variations of passages of Lorem Ipsum available.</p>
+              <button class="text-start text-base text-tea-head font-bold">Learn More</button>
+            </div>
+          </div>
+          <!-- card 2 -->
+          <div class="card  bg-base-100 border-2 p-5">
+            <figure><img class="w-full" src="./images/news-2.png" alt="Shoes" /></figure>
+            <div class="card-body p-2 mt-3">
+              <span class="text-base text-tea-description font-medium">Feb 05, 2027</span>
+              <h2 class="card-title text-xl text-tea-head font-extrabold">
+                Collecting 8 points for discount
+              </h2>
+              <p class="text-base text-tea-description font-medium">There are many variations of passages of Lorem Ipsum available.</p>
+              <button class="text-start text-base text-tea-head font-bold">Learn More</button>
+            </div>
+          </div>
+          <!-- card 3 -->
+          <div class="card  bg-base-100 border-2 p-5">
+            <figure><img class="w-full" src="./images/news-3.png" alt="Shoes" /></figure>
+            <div class="card-body p-2 mt-3">
+              <span class="text-base text-tea-description font-medium">Feb 05, 2027</span>
+              <h2 class="card-title text-xl text-tea-head font-extrabold">
+                Collecting 8 points for discount
+              </h2>
+              <p class="text-base text-tea-description font-medium">There are many variations of passages of Lorem Ipsum available.</p>
+              <button class="text-start text-base text-tea-head font-bold">Learn More</button>
+            </div>
+          </div>
+        </div>
+
       </section>
 
 
